[project]
name = "ControlAltAI Nodes"
description = "Quality fo Life Nodes from ControlAltAI. Flux Resolution Calculator and Sampler."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/gseth/ControlAltAI-Nodes/"

[tool.comfy]
PublisherId = "ControlAltAI"
DisplayName = "ControlAltAI Nodes"
Icon = ""
