[project]
name = "comfyui_controlaltai_nodes"
description = "Quality fo Life Nodes from ControlAltAI. Flux Resolution Calculator and Sampler."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/gseth/ControlAltAI-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "controlaltai"
DisplayName = "ComfyUI_ControlAltAI_Nodes"
Icon = ""
