[project]
name = "controlaltai-nodes"
description = "Quality of Life Nodes from ControlAltAI. Flux Resolution Calculator, Flux Sampler, Flux Union ControlNet Apply, Noise Plus Blend, Boolean Logic, and Flux Region Nodes."
version = "1.1.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/gseth/ControlAltAI-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "controlaltai"
DisplayName = "ControlAltAI_Nodes"
Icon = ""
